<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <VideoView
            android:id="@+id/vv_fondo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2:4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
            >
        </VideoView>
    </androidx.constraintlayout.widget.ConstraintLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"



            android:gravity="top"
            android:orientation="vertical"
            android:padding="10dp">



            <ImageView
                android:id="@+id/logokerkly"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="150dp"
                app:srcCompat="@drawable/kerr" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_slogin"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tab1"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="20dp"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/txt_sregister"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tab2"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lvl_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="visible">

                <View
                    android:layout_width="20dp"
                    android:layout_height="10dp" />



                <View
                    android:layout_width="20dp"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="30dp"
                        android:layout_width="wrap_content"

                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                   />

                    <EditText
                        android:id="@+id/ed_email"
                         android:layout_width="match_parent"

                        android:layout_height="wrap_content"

                        android:layout_marginTop="15dp"
                        android:background="@drawable/border"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"
                        android:textColor="@color/white" />

                </LinearLayout>

                <View
                    android:layout_width="20dp"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linearL"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/white"
                        android:text="@string/password"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        app:passwordToggleEnabled = "true"
                        app:passwordToggleTint="@color/white"
                        app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
                        android:id="@+id/login_password_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_passsword"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:inputType="textPassword"

                            android:textColor="@color/white"
                            android:textSize="20dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <View
                    android:layout_width="20dp"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/txt_forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/forgrot"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="20dp"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lvl_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <View
                    android:layout_width="20dp"
                    android:layout_height="10dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/ed_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/border"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/white" />
                </LinearLayout>

                <View
                    android:layout_width="20dp"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/ed_emailnew"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/border"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="@color/white" />
                </LinearLayout>

                <View
                    android:layout_width="20dp"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/code"
                            android:enabled="false"
                            android:textColor="@color/white" />

                        <AutoCompleteTextView
                            android:id="@+id/at_code"
                            android:enabled="false"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/border"
                            android:ems="10"
                            android:textColor="@color/white"
                            android:text="+52"
                            android:hint=""
                            android:padding="10dp">


                        </AutoCompleteTextView>
                    </LinearLayout>

                    <View
                        android:layout_width="15dp"
                        android:layout_height="1dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mobile"

                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/ed_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/border"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:padding="10dp"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="20dp"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/white" />



                    <com.google.android.material.textfield.TextInputLayout
                        app:passwordToggleEnabled = "true"
                        app:passwordToggleTint="@color/white"
                        app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
                        android:id="@+id/login_password_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_passswordnew"
android:textSize="20dp"
                            android:background="@drawable/border"
                            android:textColor="@color/white"

                            android:layout_width="match_parent"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <View
                    android:layout_width="20dp"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refercode"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/ed_refercode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/border"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/white" />
                </LinearLayout>


                <View
                    android:layout_width="20dp"
                    android:layout_height="30dp" />


                <TextView
                    android:id="@+id/txt_register"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>


</RelativeLayout>
</ScrollView>